// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Snapshot tests bottom placement 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="bottom"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig__tooltip-container"
        >
            <div
                className="hig__tooltip-title"
            >
                test
            </div>
        </div>
    }
    overlayClassName="css-d70g0l"
    placement="right"
    prefixCls="hig__tooltip"
    title="test"
    transitionName="fade"
    trigger="click"
    width={300}
>
    <div
        className="hig__tooltip-children-wrapper"
    >
        <button>
            tooltip
        </button>
    </div>
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="bottom"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="bottom"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      prefixCls="hig__tooltip"
      title="test"
      trigger="click"
      width={300}
>
      <button>
            tooltip
      </button>
</Tooltip>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "bottom",
        "arrowContent": null,
        "children": <button>
          tooltip
</button>,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "prefixCls": "hig__tooltip",
        "title": "test",
        "trigger": "click",
        "width": 300,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="bottom"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="bottom"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    prefixCls="hig__tooltip"
    title="test"
    trigger="click"
    width={300}
>
    <button>
        tooltip
    </button>
</Tooltip>,
}
`;

exports[`Tooltip Snapshot tests focus 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="left"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig__tooltip-container"
        >
            <div
                className="hig__tooltip-title"
            >
                test
            </div>
        </div>
    }
    overlayClassName="css-d70g0l"
    placement="right"
    prefixCls="hig__tooltip"
    title="test"
    transitionName="fade"
    trigger="focus"
    width={300}
>
    <div
        className="hig__tooltip-children-wrapper"
    >
        <button>
            tooltip
        </button>
    </div>
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="focus"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      prefixCls="hig__tooltip"
      title="test"
      trigger="focus"
      width={300}
>
      <button>
            tooltip
      </button>
</Tooltip>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "left",
        "arrowContent": null,
        "children": <button>
          tooltip
</button>,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "prefixCls": "hig__tooltip",
        "title": "test",
        "trigger": "focus",
        "width": 300,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="focus"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="left"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    prefixCls="hig__tooltip"
    title="test"
    trigger="focus"
    width={300}
>
    <button>
        tooltip
    </button>
</Tooltip>,
}
`;

exports[`Tooltip Snapshot tests hover 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="bottom"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={0}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig__tooltip-container"
        >
            <div
                className="hig__tooltip-title"
            >
                test
            </div>
        </div>
    }
    overlayClassName="css-d70g0l"
    placement="right"
    prefixCls="hig__tooltip"
    title="test"
    transitionName="fade"
    trigger="hover"
    width={300}
>
    <div
        className="hig__tooltip-children-wrapper"
    >
        <button>
            tooltip
        </button>
    </div>
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="bottom"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={0}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="hover"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="bottom"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={0}
      mouseLeaveDelay={0.2}
      prefixCls="hig__tooltip"
      title="test"
      trigger="hover"
      width={300}
>
      <button>
            tooltip
      </button>
</Tooltip>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "bottom",
        "arrowContent": null,
        "children": <button>
          tooltip
</button>,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 0,
        "mouseLeaveDelay": 0.2,
        "prefixCls": "hig__tooltip",
        "title": "test",
        "trigger": "hover",
        "width": 300,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="bottom"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={0}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="hover"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="bottom"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={0}
    mouseLeaveDelay={0.2}
    prefixCls="hig__tooltip"
    title="test"
    trigger="hover"
    width={300}
>
    <button>
        tooltip
    </button>
</Tooltip>,
}
`;

exports[`Tooltip Snapshot tests left placement 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="left"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig__tooltip-container"
        >
            <div
                className="hig__tooltip-title"
            >
                test
            </div>
        </div>
    }
    overlayClassName="css-d70g0l"
    placement="right"
    prefixCls="hig__tooltip"
    title="test"
    transitionName="fade"
    trigger="click"
    width={300}
>
    <div
        className="hig__tooltip-children-wrapper"
    >
        <button>
            tooltip
        </button>
    </div>
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      prefixCls="hig__tooltip"
      title="test"
      trigger="click"
      width={300}
>
      <button>
            tooltip
      </button>
</Tooltip>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "left",
        "arrowContent": null,
        "children": <button>
          tooltip
</button>,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "prefixCls": "hig__tooltip",
        "title": "test",
        "trigger": "click",
        "width": 300,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="left"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="left"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    prefixCls="hig__tooltip"
    title="test"
    trigger="click"
    width={300}
>
    <button>
        tooltip
    </button>
</Tooltip>,
}
`;

exports[`Tooltip Snapshot tests right placement 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig__tooltip-container"
        >
            <div
                className="hig__tooltip-title"
            >
                test
            </div>
        </div>
    }
    overlayClassName="css-d70g0l"
    placement="right"
    prefixCls="hig__tooltip"
    title="test"
    transitionName="fade"
    trigger="click"
    width={300}
>
    <div
        className="hig__tooltip-children-wrapper"
    >
        <button>
            tooltip
        </button>
    </div>
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      prefixCls="hig__tooltip"
      title="test"
      trigger="click"
      width={300}
>
      <button>
            tooltip
      </button>
</Tooltip>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "right",
        "arrowContent": null,
        "children": <button>
          tooltip
</button>,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "prefixCls": "hig__tooltip",
        "title": "test",
        "trigger": "click",
        "width": 300,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    prefixCls="hig__tooltip"
    title="test"
    trigger="click"
    width={300}
>
    <button>
        tooltip
    </button>
</Tooltip>,
}
`;

exports[`Tooltip Snapshot tests tooltip with description 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="bottom"
    arrowContent={null}
    description="test"
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig__tooltip-container"
        >
            <div
                className="hig__tooltip-title"
            >
                test
            </div>
            <div
                className="hig__tooltip-description"
            >
                test
            </div>
        </div>
    }
    overlayClassName="css-d70g0l"
    placement="right"
    prefixCls="hig__tooltip"
    title="test"
    transitionName="fade"
    trigger="click"
    width={300}
>
    <div
        className="hig__tooltip-children-wrapper"
    >
        <button>
            tooltip
        </button>
    </div>
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="bottom"
      arrowContent={null}
      description="test"
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
                  <div
                        className="hig__tooltip-description"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="bottom"
      arrowContent={null}
      description="test"
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      prefixCls="hig__tooltip"
      title="test"
      trigger="click"
      width={300}
>
      <button>
            tooltip
      </button>
</Tooltip>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "bottom",
        "arrowContent": null,
        "children": <button>
          tooltip
</button>,
        "description": "test",
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "prefixCls": "hig__tooltip",
        "title": "test",
        "trigger": "click",
        "width": 300,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="bottom"
      arrowContent={null}
      description="test"
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
                  <div
                        className="hig__tooltip-description"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="bottom"
    arrowContent={null}
    description="test"
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    prefixCls="hig__tooltip"
    title="test"
    trigger="click"
    width={300}
>
    <button>
        tooltip
    </button>
</Tooltip>,
}
`;

exports[`Tooltip Snapshot tests tooltip with html content 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="bottom"
    arrowContent={null}
    content={
        <div>
            test
        </div>
    }
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig__tooltip-container"
        >
            <div
                className="hig__tooltip-title"
            >
                test
            </div>
            <div
                className="hig__tooltip-inner-content"
            >
                <div>
                    test
                </div>
            </div>
        </div>
    }
    overlayClassName="css-d70g0l"
    placement="right"
    prefixCls="hig__tooltip"
    title="test"
    transitionName="fade"
    trigger="click"
    width={300}
>
    <div
        className="hig__tooltip-children-wrapper"
    >
        <button>
            tooltip
        </button>
    </div>
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="bottom"
      arrowContent={null}
      content={
            <div>
                  test
            </div>
      }
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
                  <div
                        className="hig__tooltip-inner-content"
                  >
                        <div>
                              test
                        </div>
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="bottom"
      arrowContent={null}
      content={
            <div>
                  test
            </div>
      }
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      prefixCls="hig__tooltip"
      title="test"
      trigger="click"
      width={300}
>
      <button>
            tooltip
      </button>
</Tooltip>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "bottom",
        "arrowContent": null,
        "children": <button>
          tooltip
</button>,
        "content": <div>
          test
</div>,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "prefixCls": "hig__tooltip",
        "title": "test",
        "trigger": "click",
        "width": 300,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="bottom"
      arrowContent={null}
      content={
            <div>
                  test
            </div>
      }
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
                  <div
                        className="hig__tooltip-inner-content"
                  >
                        <div>
                              test
                        </div>
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="bottom"
    arrowContent={null}
    content={
        <div>
            test
        </div>
    }
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    prefixCls="hig__tooltip"
    title="test"
    trigger="click"
    width={300}
>
    <button>
        tooltip
    </button>
</Tooltip>,
}
`;

exports[`Tooltip Snapshot tests tooltip with link 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="bottom"
    arrowContent={null}
    description="test"
    destroyTooltipOnHide={true}
    linkTitle="link"
    linkURL="www.google.com"
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig__tooltip-container"
        >
            <div
                className="hig__tooltip-title"
            >
                test
            </div>
            <div
                className="hig__tooltip-description"
            >
                test
            </div>
            <div
                className="hig__tooltip-link"
            >
                <hr />
                <a
                    href="www.google.com"
                >
                    link
                </a>
            </div>
        </div>
    }
    overlayClassName="css-d70g0l"
    placement="right"
    prefixCls="hig__tooltip"
    title="test"
    transitionName="fade"
    trigger="click"
    width={300}
>
    <div
        className="hig__tooltip-children-wrapper"
    >
        <button>
            tooltip
        </button>
    </div>
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="bottom"
      arrowContent={null}
      description="test"
      destroyTooltipOnHide={true}
      linkTitle="link"
      linkURL="www.google.com"
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
                  <div
                        className="hig__tooltip-description"
                  >
                        test
                  </div>
                  <div
                        className="hig__tooltip-link"
                  >
                        <hr />
                        <a
                              href="www.google.com"
                        >
                              link
                        </a>
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="bottom"
      arrowContent={null}
      description="test"
      destroyTooltipOnHide={true}
      linkTitle="link"
      linkURL="www.google.com"
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      prefixCls="hig__tooltip"
      title="test"
      trigger="click"
      width={300}
>
      <button>
            tooltip
      </button>
</Tooltip>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "bottom",
        "arrowContent": null,
        "children": <button>
          tooltip
</button>,
        "description": "test",
        "destroyTooltipOnHide": true,
        "linkTitle": "link",
        "linkURL": "www.google.com",
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "prefixCls": "hig__tooltip",
        "title": "test",
        "trigger": "click",
        "width": 300,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="bottom"
      arrowContent={null}
      description="test"
      destroyTooltipOnHide={true}
      linkTitle="link"
      linkURL="www.google.com"
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
                  <div
                        className="hig__tooltip-description"
                  >
                        test
                  </div>
                  <div
                        className="hig__tooltip-link"
                  >
                        <hr />
                        <a
                              href="www.google.com"
                        >
                              link
                        </a>
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="bottom"
    arrowContent={null}
    description="test"
    destroyTooltipOnHide={true}
    linkTitle="link"
    linkURL="www.google.com"
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    prefixCls="hig__tooltip"
    title="test"
    trigger="click"
    width={300}
>
    <button>
        tooltip
    </button>
</Tooltip>,
}
`;

exports[`Tooltip Snapshot tests top placement 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="top"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig__tooltip-container"
        >
            <div
                className="hig__tooltip-title"
            >
                test
            </div>
        </div>
    }
    overlayClassName="css-d70g0l"
    placement="right"
    prefixCls="hig__tooltip"
    title="test"
    transitionName="fade"
    trigger="click"
    width={300}
>
    <div
        className="hig__tooltip-children-wrapper"
    >
        <button>
            tooltip
        </button>
    </div>
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="top"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="top"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      prefixCls="hig__tooltip"
      title="test"
      trigger="click"
      width={300}
>
      <button>
            tooltip
      </button>
</Tooltip>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "top",
        "arrowContent": null,
        "children": <button>
          tooltip
</button>,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "prefixCls": "hig__tooltip",
        "title": "test",
        "trigger": "click",
        "width": 300,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="top"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig__tooltip-container"
            >
                  <div
                        className="hig__tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      overlayClassName="css-d70g0l"
      placement="right"
      prefixCls="hig__tooltip"
      title="test"
      transitionName="fade"
      trigger="click"
      width={300}
>
      <div
            className="hig__tooltip-children-wrapper"
      >
            <button>
                  tooltip
            </button>
      </div>
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="top"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    prefixCls="hig__tooltip"
    title="test"
    trigger="click"
    width={300}
>
    <button>
        tooltip
    </button>
</Tooltip>,
}
`;
